// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List> by default matches with snapshot 1`] = `
<ul
  className="sc-htpNat eHJKlI k-List"
>
  <li>
    <div>
      Item 1
    </div>
  </li>
  <li>
    <div>
      Item 2
    </div>
  </li>
  <li>
    <div>
      Item 3
    </div>
  </li>
</ul>
`;

exports[`<List> with <ListButtonItem> by default matches with snapshot 1`] = `
<ul
  className="sc-htpNat eHJKlI k-List"
>
  <li>
    <div
      aria-disabled={false}
      className="sc-bwzfXH fGZJuw k-List__button k-List__button--withTopBorder"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="k-List__button__content"
      >
        Alice
      </div>
      <div
        aria-hidden={true}
        className="k-List__button__arrow"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-Button__icon k-List__button__arrowIcon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="sc-bwzfXH fGZJuw k-List__button k-List__button--isActive"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="k-List__button__content"
      >
        Cheshire Cat
      </div>
      <div
        aria-hidden={true}
        className="k-List__button__arrow"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-Button__icon k-List__button__arrowIcon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="sc-bwzfXH fGZJuw k-List__button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="k-List__button__content"
      >
        Mad Hatter
      </div>
    </div>
  </li>
</ul>
`;

exports[`<List> with <ListButtonItem> with a disabled button matches with snapshot 1`] = `
<ul
  className="sc-htpNat eHJKlI k-List"
>
  <li>
    <div
      aria-disabled={false}
      className="sc-bwzfXH fGZJuw k-List__button k-List__button--withTopBorder"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="k-List__button__content"
      >
        Alice
      </div>
      <div
        aria-hidden={true}
        className="k-List__button__arrow"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-Button__icon k-List__button__arrowIcon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={true}
      className="sc-bwzfXH fGZJuw k-List__button"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onKeyPress={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        className="k-List__button__content"
      >
        Cheshire Cat
      </div>
      <div
        aria-hidden={true}
        className="k-List__button__arrow"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-Button__icon k-List__button__arrowIcon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="sc-bwzfXH fGZJuw k-List__button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="k-List__button__content"
      >
        Mad Hatter
      </div>
      <div
        aria-hidden={true}
        className="k-List__button__arrow"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-Button__icon k-List__button__arrowIcon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
</ul>
`;
